# maybe-dns

./: Cargo.toml  LICENSE  README.md
src/: buffer.rs  byteconvertible.rs  dns.rs  error.rs  fqdn.rs  header.rs  lib.rs  mdns.rs  packet.rs  question.rs  record_data.rs  resource.rs  resource_record_set.rs  util.rs
src/dns/: byteconvertible.rs  error.rs  fqdn.rs  header.rs  mod.rs  packet.rs  question.rs  record.rs  resource.rs  util.rs
src/mdns/: mod.rs  oneshot.rs  resolver.rs
src/rdata/: a.rs  aaaa.rs  apl.rs  caa.rs  cname.rs  csync.rs  dhcid.rs  dnssec.rs  eui48.rs  eui64.rs  hinfo.rs  hip.rs  ipseckey.rs  loc.rs  minfo.rs  mod.rs  mx.rs  naptr.rs  ns.rs  null.rs  openpgpkey.rs  opt.rs  ptr.rs  soa.rs  srv.rs  sshfp.rs  svcb.rs  tkey.rs  tlsa.rs  tsig.rs  txt.rs  uri.rs  wks.rs
