[package]
name = "maybe-dns"
version = "0.1.0"
authors = ["Timo Glane <timo.glane<at>gmail.com>"]
edition = "2021"
description = "Library to parse and create DNS packets with an optional extension for MDNS packets"
license = "MIT"
keywords = ["dns", "mdns", "parser"]
categories = ["network-programming", "parsing", "parser-implementations", "web-programming"]

[features]
mdns = []

[dependencies]
modular-bitfield = "0.11.2"
rand = "0.8.5"
