[package]
name = "maybe-dns"
version = "0.1.0"
authors = ["Timo Glane <timo.glane<at>gmail.com>"]
edition = "2021"
description = "Library to parse and create DNS packets with an optional extension for MDNS packets"
license = "MIT"
keywords = ["dns", "mdns", "parser"]
categories = ["network-programming", "parsing", "parser-implementations", "web-programming"]

[features]
mdns = []

[dependencies]
base64 = "0.21.4"
crrl = "0.8.0"
dsa = "0.6.1"
md-5 = "0.10.6"
modular-bitfield = "0.11.2"
rand = "0.8.5"
ring = "0.17.5"
rsa = { version = "0.9.3", features = ["sha2"] }
sha1 = "0.10.6"
signature = "2.1.0"
