[package]
name = "maybe-dns"
version = "0.1.0"
authors = ["Timo Glane <timo.glane<at>gmail.com>"]
edition = "2021"
description = "Library to parse and create DNS packets with an optional extension for MDNS packets"
license = "MIT"
keywords = ["dns", "mdns", "parser"]
categories = ["network-programming", "parsing", "parser-implementations", "web-programming"]

[features]
mdns = []
dnssec = ["dep:base64", "dep:crrl", "dep:dsa", "dep:md-5", "dep:rand", "dep:rsa", "dep:sha1", "dep:signature"]

[dependencies]
base64 = { version = "0.21.4", optional = true }
crrl = { version = "0.8.0", optional = true }
dsa = { version = "0.6.1", optional = true }
md-5 = { version = "0.10.6", optional = true }
modular-bitfield = "0.11.2"
rand = { version = "0.8.5", optional = true }
ring = { version = "0.17.5" }
rsa = { version = "0.9.3", features = ["sha2"], optional = true }
sha1 = { version = "0.10.6", optional = true }
signature = { version = "2.1.0", optional = true }
